--- a/lab_5/Web.config
+++ b/lab_5/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-lab_5-20180614013654.mdf;Initial Catalog=aspnet-lab_5-20180614013654;Integrated Security=True" providerName="System.Data.SqlClient" />
+      <add name="MyContext" connectionString="data source=databaseslab1.database.windows.net;initial catalog=mydblob4;user id=adminadmun;password=Qwerty123;persist security info=True;Pooling=false;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
